# my_little_graphic_format

./: CMakeLists.txt  README.md
src/: Image.cpp  Image.h  ImageMLGF.cpp  ImageMLGF.h  MenuWidget.cpp  MenuWidget.h  Window.cpp  Window.h  logSDLerror.h  main.cpp
